added a footer with links to github and deployed site

--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
 </head>
 <body>
     <h1>Do you need a poem to share with children?</h1>
+
+
+    <footer>
+<p>This AI project was coded by <a href="https://github.com/nchoin" target="_blank">Nicole Choiniere-Kroeker</a>and is open-sourced on <a href="https://github.com/nchoin/children-s-poetry-generator-nck" target="_blank">GitHub</a>and deployed by <a href="https://ai-generated-poetry-for-children-nck.netlify.app/" target="_blank">Netlify</a> </p>
+
+    </footer>
+
+
+    <!-- Link to js file -->
     <script src="src/index.js"></script>
 </body>
 </html>
