added color palette in css. added favicon and linked it in an images folder.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Children's Poetry Generator</title>
     <link rel="stylesheet" href="src/style.css">
+    <link rel="shortcut icon" href="images/favicon-initials.jpg" type="image/x-icon">
+    <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
 </head>
 <body>
     <h1>Do you need a poem to share with children?</h1>
