added css for the project

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
       href="images/favicon-initials.jpg"
       type="image/x-icon"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Acme&family=Comic+Neue:wght@300;700&family=Delius&family=Neuton:ital,wght@0,200;0,300;0,400;0,700;0,800;1,400&family=Shadows+Into+Light+Two&display=swap" rel="stylesheet">
     <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
   </head>
@@ -24,16 +27,16 @@
         <input
           type="text"
           name=""
-          id=""
+          id="poem-topic"
           placeholder="Enter a topic for your poem."
           autofocus
           required
           autocomplete="off"
         />
-        <input type="submit" value="Submit" />
+        <input type="submit" value="Submit" class="button"/>
       </form>
 
-      <div id="">
+      <div id="ai-poem">
         the poem will go here
         <br />
         witha  break between lines
