added basic JS handling and added typewriter plugin

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <main id="poem-container">
       <!-- form to enter poetry topic -->
-      <form action="">
+      <form action="" id="poem-form">
         <input
           type="text"
           name=""
@@ -37,9 +37,7 @@
       </form>
 
       <div id="ai-poem">
-        the poem will go here
-        <br />
-        witha  break between lines
+      
       </div>
     </main>
 
