created the function to get the poem from AI and display on the screen.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </head>
   <body>
     <header>
-      <h1>AI Poems for Children Generator</h1>
+      <h1 class="title">AI Poems for Children Generator</h1>
     </header>
 
     <main id="poem-container">
