changed coloring and css to look like a clipboard on a green chalkboard.

--- a/index.html
+++ b/index.html
@@ -10,19 +10,23 @@
       href="images/favicon-initials.jpg"
       type="image/x-icon"
     />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Acme&family=Comic+Neue:wght@300;700&family=Delius&family=Neuton:ital,wght@0,200;0,300;0,400;0,700;0,800;1,400&family=Shadows+Into+Light+Two&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Acme&family=Caveat:wght@400;500;600;700&family=Comic+Neue:wght@300;400&family=Delius&family=Neuton:ital,wght@0,200;0,300;0,400;0,700;0,800;1,400&family=Shadows+Into+Light+Two&display=swap"
+      rel="stylesheet"
+    />
     <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
   </head>
   <body>
     <header>
-      <h1 class="title">AI Poems for Children Generator</h1>
+      <h1 class="title">Children's Poetry by AI</h1>
     </header>
 
     <main id="poem-container">
       <!-- form to enter poetry topic -->
+
       <form action="" id="poem-form">
         <input
           type="text"
@@ -33,11 +37,10 @@
           required
           autocomplete="off"
         />
-        <input type="submit" value="Submit" class="button"/>
+        <input type="submit" value="Submit" class="button" />
       </form>
-
-      <div id="ai-poem">
-      
+      <div class="paper">
+        <div id="ai-poem"></div>
       </div>
     </main>
 
